[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"
authors = ["Shravan Dhar"]
license = "MIT"
description = "A tool everything ?"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
indicatif = "0.16.2"
env_logger = "0.9.0"
log = "0.4.14"
ctrlc = "3.2.1"